--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Cocos2d-html5</title>
+    <title>"笑笑了"</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body style="padding:0; margin: 0;">
-<canvas id="gameCanvas" width="450" height="450"></canvas>
+<canvas id="gameCanvas" width="720" height="1280"></canvas>
 
 <script src="game.min.js"></script>
 </body>
